--- a/proyecto/src/app/docente/page.module.css
+++ b/proyecto/src/app/docente/page.module.css
@@ -1,6 +1,10 @@
-.tablero {
+.Main {
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-end;
 
+}
+
+.Info {
+    padding: 4%;
 }
