--- a/proyecto/src/app/docente/page.module.css
+++ b/proyecto/src/app/docente/page.module.css
@@ -7,4 +7,10 @@
 
 .Info {
     padding: 4%;
+    width: -webkit-fill-available;
+}
+
+.Fondo {
+    background-color: #F3EEF6;
+    padding: 15px;
 }
