--- a/proyecto/src/components/TopBarInicio/TopBar.module.css
+++ b/proyecto/src/components/TopBarInicio/TopBar.module.css
@@ -9,4 +9,16 @@
 
 .item {
     margin: 10px;
+    color: #684FA5;
+    text-decoration: none;
+}
+
+.item:hover {
+    color: black;
+}
+
+.fondo {
+    background-image: url(../../../public/images/fondo.jpg);
+    background-size: cover;
+    height: calc(100vh - 80px)!important;
 }
