--- a/proyecto/src/app/page.module.css
+++ b/proyecto/src/app/page.module.css
@@ -1,15 +1,5 @@
-.Main {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
-
-}
-
-.carousel {
-  width: -webkit-fill-available;
-
-}
-
-.carousel-inner {
-  height: 650px;
+.fondo {
+  background-image: url(../../public/images/fondo.jpg);
+  background-size: cover;
+  height: calc(100vh - 80px)!important;
 }
