--- a/proyecto/src/app/Registro/styles.module.css
+++ b/proyecto/src/app/Registro/styles.module.css
@@ -1,15 +1,11 @@
-.container {
+.container{
     display: flex;
-    flex-direction: column;
-    align-items:normal;
     justify-content: center;
-    width: 90vh;
     height: 100vh;
-
-
+    flex-direction: column;
   }
 
-.container h3,h4{
+.container h3, .container h4{
     text-align: center;
     padding-bottom: 25px;
 }
