--- a/proyecto/src/app/Perfil/page.module.css
+++ b/proyecto/src/app/Perfil/page.module.css
@@ -142,8 +142,10 @@
   }
 
 .foto{
-  width: 150px;
+  width: 200px;
   height: 150px;
+  background-image: url(../../../public/images/perfil.png);
+  background-size: cover;
   }
 
 .forms1{
@@ -241,6 +243,8 @@
 
   .button{
     padding: 5px;
+    border: none;
+    padding: 10px;
   }
   .universidadContainer{
     display: flex;
