Se agrego citas a la pantalla principal

--- a/proyecto/src/components/Footer/Footer.module.css
+++ b/proyecto/src/components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
-    background-color: #c5b8e6;
-    padding: 10px;
+    background-color: #d7cfe9;
+    padding: 10px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
