--- a/proyecto/src/app/DocentePrincipal/page.module.css
+++ b/proyecto/src/app/DocentePrincipal/page.module.css
@@ -5,7 +5,7 @@
 }
 
 .Info {
-  padding: 4%;
+  padding: 4% 4% 0 4%;
   width: -webkit-fill-available;
 }
 
@@ -60,4 +60,10 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, auto);
   grid-gap: 10px;
+}
+
+.mascota {
+  padding-top: 20px;
+  display: flex;
+  justify-content: right;
 }
