--- a/proyecto/src/app/globals.css
+++ b/proyecto/src/app/globals.css
@@ -1,4 +1,12 @@
-html, body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto:wght@400;500;600;700;800&display=swap");
+
+* {
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+html,
+body {
   max-width: 100vw;
   overflow-x: hidden;
 }
