--- a/proyecto/src/app/Perfil-Alumno/page.module.css
+++ b/proyecto/src/app/Perfil-Alumno/page.module.css
@@ -118,7 +118,7 @@
     display:flex;
     flex-direction: column;
     padding: 0 20px;
-    background-color: lawngreen;
+    background-color: white;
     
 
     
